[gd_scene load_steps=2 format=3 uid="uid://pjvajmuvf1q1"]

[ext_resource type="Script" path="res://scenes/options_menu/options_menu_ui.gd" id="1_akrml"]

[node name="OptionsMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_akrml")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.161108, 0.161108, 0.161108, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="CenterContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="RestartRunButton" type="Button" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_horizontal = 4
text = "Restart Run"

[node name="MainMenuButton" type="Button" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"

[node name="BackToGameButton" type="Button" parent="CenterContainer/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
text = "Back"

[connection signal="pressed" from="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/RestartRunButton" to="." method="_on_restart_run_button_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/MarginContainer/VBoxContainer/BackToGameButton" to="." method="_on_back_to_game_button_pressed"]
